--- a/.github/workflows/build-amd.yml
+++ b/.github/workflows/build-amd.yml
@@ -61,7 +61,7 @@ jobs:
         git checkout 73858df14dc3f0e701814c84bb8bd6b72f80a806 # Use a tried and true version of Spack
         cd ..
         source spack/share/spack/setup-env.sh
-        scripts/build_lbann.sh -d --dependencies-only -l ci -- +numpy +unit_tests +rocm
+        scripts/build_lbann.sh -d --dependencies-only -l ci -- +numpy +unit_tests +rocm amdgpu_target=gfx90a
 
     - name: Cache Spack-built dependencies
       id: cache-spack-save
@@ -76,4 +76,4 @@ jobs:
       run: |
         source /usr/share/lmod/lmod/init/bash
         source spack/share/spack/setup-env.sh
-        scripts/build_lbann.sh -r -l ci --ci -- +numpy +unit_tests +rocm
+        scripts/build_lbann.sh -r -l ci --ci -- +numpy +unit_tests +rocm amdgpu_target=gfx90a
