--- a/.github/workflows/build-amd.yml
+++ b/.github/workflows/build-amd.yml
@@ -41,10 +41,7 @@ jobs:
         echo 'deb [arch=amd64 signed-by=/etc/apt/keyrings/rocm.gpg] https://repo.radeon.com/rocm/apt/debian jammy main' | sudo tee /etc/apt/sources.list.d/rocm.list
         echo -e 'Package: *\nPin: release o=repo.radeon.com\nPin-Priority: 600' | sudo tee /etc/apt/preferences.d/rocm-pin-600
         sudo apt update
-        sudo apt install rocm-hip-libraries
-
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v3
+        sudo apt install rocm-hip-libraries=${{ matrix.rocm }}
 
     - name: Restore cached Spack-built dependencies
       id: cache-spack
@@ -64,6 +61,10 @@ jobs:
         git checkout 73858df14dc3f0e701814c84bb8bd6b72f80a806 # Use a tried and true version of Spack
         cd ..
         source spack/share/spack/setup-env.sh
+        
+        # Setup ROCm in spack
+        spack external find -p /opt/rocm --not-buildable -t rocm
+        
         scripts/build_lbann.sh -d --dependencies-only -l ci -- +numpy +unit_tests +rocm amdgpu_target=gfx90a
 
     - name: Cache Spack-built dependencies
