--- a/.github/workflows/build-amd.yml
+++ b/.github/workflows/build-amd.yml
@@ -41,7 +41,7 @@ jobs:
         echo 'deb [arch=amd64 signed-by=/etc/apt/keyrings/rocm.gpg] https://repo.radeon.com/rocm/apt/debian jammy main' | sudo tee /etc/apt/sources.list.d/rocm.list
         echo -e 'Package: *\nPin: release o=repo.radeon.com\nPin-Priority: 600' | sudo tee /etc/apt/preferences.d/rocm-pin-600
         sudo apt update
-        sudo apt install rocm-hip-libraries=${{ matrix.rocm }}
+        sudo apt install rocm-hip-libraries #=${{ matrix.rocm }}
 
     - name: Restore cached Spack-built dependencies
       id: cache-spack
