--- a/.github/workflows/build-amd.yml
+++ b/.github/workflows/build-amd.yml
@@ -39,8 +39,9 @@ jobs:
         wget https://repo.radeon.com/rocm/rocm.gpg.key -O - | gpg --dearmor | sudo tee /etc/apt/keyrings/rocm.gpg > /dev/null
         echo "deb [arch=amd64 signed-by=/etc/apt/keyrings/rocm.gpg] https://repo.radeon.com/amdgpu/${{ matrix.rocm }}/ubuntu jammy main" | sudo tee /etc/apt/sources.list.d/amdgpu.list
         echo "deb [arch=amd64 signed-by=/etc/apt/keyrings/rocm.gpg] https://repo.radeon.com/rocm/apt/${{ matrix.rocm }} jammy main" | sudo tee --append /etc/apt/sources.list.d/rocm.list
+        echo -e 'Package: *\nPin: release o=repo.radeon.com\nPin-Priority: 600' | sudo tee /etc/apt/preferences.d/rocm-pin-600
         sudo apt update
-        sudo apt install rocm-hip-libraries
+        sudo apt install rocm-hip-sdk
 
     - name: Restore cached Spack-built dependencies
       id: cache-spack
