--- a/.github/workflows/build-amd.yml
+++ b/.github/workflows/build-amd.yml
@@ -52,7 +52,7 @@ jobs:
           spack
         key: ${{ runner.os }}-rocm${{ matrix.rocm }}-spackdeps
 
-    - name: Build and install LBANN dependencies
+    - name: Build and install Spack
       if: steps.cache-spack.outputs.cache-hit != 'true'
       run: |
         source /usr/share/lmod/lmod/init/bash
@@ -62,6 +62,12 @@ jobs:
         cd ..
         source spack/share/spack/setup-env.sh
         
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
+
+    - name: Build and install LBANN dependencies
+      if: steps.cache-spack.outputs.cache-hit != 'true'
+      run: |
         # Setup ROCm in spack
         spack external find -p /opt/rocm --not-buildable hip
         
