--- a/.github/workflows/build-cuda.yml
+++ b/.github/workflows/build-cuda.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        cuda: ['11.8']
+        cuda: ['11.5']
 
     steps:
     - uses: actions/checkout@v4
@@ -28,8 +28,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y libyaml-dev cmake lmod ninja-build
-        sudo apt-get install -y libblas-dev libopenblas-dev liblapacke-dev
-        sudo apt-get install -y openmpi-bin openmpi-common libopenmpi-dev
+        sudo apt-get install -y nvidia-cuda-toolkit=${{ matrix.cuda }}
         python -m pip install --upgrade pip
 
     - name: Restore cached Spack-built dependencies
@@ -47,7 +46,7 @@ jobs:
         source /usr/share/lmod/lmod/init/bash
         git clone -c feature.manyFiles=true https://github.com/spack/spack.git
         cd spack
-        git checkout 5351382501e280838d148f15dfd485f2a78667f2 # Use a tried and true version of Spack
+        git checkout 73858df14dc3f0e701814c84bb8bd6b72f80a806 # Use a tried and true version of Spack
         cd ..
         source spack/share/spack/setup-env.sh
         scripts/build_lbann.sh -d --dependencies-only -l ci -- +numpy +unit_tests +cuda cuda_arch=70
