--- a/.github/workflows/build-cuda.yml
+++ b/.github/workflows/build-cuda.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        cuda: ['11.5']
+        cuda: ['12.3']
 
     steps:
     - uses: actions/checkout@v4
@@ -28,8 +28,14 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y libyaml-dev cmake lmod ninja-build
-        sudo apt-get install -y nvidia-cuda-toolkit
         python -m pip install --upgrade pip
+
+    - name: Install CUDA ${{ matrix.cuda }}
+      run: |
+        wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/cuda-keyring_1.1-1_all.deb
+        sudo dpkg -i cuda-keyring_1.1-1_all.deb
+        sudo apt-get update
+        sudo apt-get -y install cuda-toolkit-12-3
 
     - name: Restore cached Spack-built dependencies
       id: cache-spack
@@ -38,7 +44,7 @@ jobs:
         path: |
           ~/.spack
           spack
-        key: ${{ runner.os }}-cuda${{ matrix.cuda }}-gcc11-spackdeps
+        key: ${{ runner.os }}-cuda${{ matrix.cuda }}-spackdeps
 
     - name: Build and install LBANN dependencies
       if: steps.cache-spack.outputs.cache-hit != 'true'
@@ -49,7 +55,7 @@ jobs:
         git checkout 73858df14dc3f0e701814c84bb8bd6b72f80a806 # Use a tried and true version of Spack
         cd ..
         source spack/share/spack/setup-env.sh
-        scripts/build_lbann.sh -d --dependencies-only -l ci -- +numpy +unit_tests +cuda cuda_arch=70 %gcc@11
+        scripts/build_lbann.sh -d --dependencies-only -l ci -- +numpy +unit_tests +cuda cuda_arch=70
 
     - name: Cache Spack-built dependencies
       id: cache-spack-save
@@ -58,10 +64,10 @@ jobs:
         path: |
           ~/.spack
           spack
-        key: ${{ runner.os }}-cuda${{ matrix.cuda }}-gcc11-spackdeps
+        key: ${{ runner.os }}-cuda${{ matrix.cuda }}-spackdeps
 
     - name: Build LBANN
       run: |
         source /usr/share/lmod/lmod/init/bash
         source spack/share/spack/setup-env.sh
-        scripts/build_lbann.sh -r -l ci --ci -- +numpy +unit_tests +cuda cuda_arch=70 %gcc@11
+        scripts/build_lbann.sh -r -l ci --ci -- +numpy +unit_tests +cuda cuda_arch=70
