--- a/.github/workflows/build-amd.yml
+++ b/.github/workflows/build-amd.yml
@@ -68,6 +68,7 @@ jobs:
     - name: Build and install LBANN dependencies
       if: steps.cache-spack.outputs.cache-hit != 'true'
       run: |
+        source spack/share/spack/setup-env.sh
         # Setup ROCm in spack
         spack external find -p /opt/rocm --not-buildable -t rocm
         
